tests/baselines/reference/classExtendsEveryObjectType2.errors.txt
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType2.ts(1,18): error TS9002: Only type references are currently supported in a class 'extends' clauses.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType2.ts(1,31): error TS1005: ',' expected.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType2.ts(3,18): error TS9002: Only type references are currently supported in a class 'extends' clauses.


==== tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType2.ts (3 errors) ====
    class C2 extends { foo: string; } { } // error
                     ~~~~~~~~~~~~~~~~
!!! error TS9002: Only type references are currently supported in a class 'extends' clauses.
                                  ~
!!! error TS1005: ',' expected.
    
    class C6 extends []{ } // error
                     ~~
!!! error TS9002: Only type references are currently supported in a class 'extends' clauses.